tests/baselines/reference/classMergedWithInterfaceMultipleBasesNoError.errors.txt
classMergedWithInterfaceMultipleBasesNoError.ts(8,30): error TS2729: Property 'handleIntersection' is used before its initialization.


==== classMergedWithInterfaceMultipleBasesNoError.ts (1 errors) ====
    interface Bar { }
    interface Baz { }
    interface Q { }
    interface Foo extends Bar, Baz { }
    class Foo { }
    
    export default class extends Foo {
        readonly observer = this.handleIntersection;
                                 ~~~~~~~~~~~~~~~~~~
!!! error TS2729: Property 'handleIntersection' is used before its initialization.
!!! related TS2728 classMergedWithInterfaceMultipleBasesNoError.ts:9:14: 'handleIntersection' is declared here.
        readonly handleIntersection = () => { }
    }